# Gambeson

./: .gitignore  CLAUDE.md  LICENSE  Modern_Gambeson_System_Whitepaper.md  ROADMAP.md  compass_artifact_wf-3f3b3600-2d4c-4688-96f9-507ba1d1d3cc_text_markdown.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  build_report.md  design_proposal.md  material_test.md
config/: armor_config.yaml  materials.yaml  simulation_params.yaml
docker/: Dockerfile  docker-compose.yaml
materials/: CORDURA_1000D.FCMat  CORDURA_500D.FCMat  D3O.FCMat  EVA_HD.FCMat  HDPE.FCMat  aluminum_6061.FCMat  armor_materials.inp  closed_cell_foam.FCMat  cotton_batting.FCMat  spacer_mesh_3d.FCMat
models/: helmet_rail.scad  rail_track.scad  skeleton_plates.scad
src/geometry/: __init__.py  config_loader.py  generate.py  materials.py  mechanical_parts.py
src/pipeline/: __init__.py  orchestrator.py
src/postprocessing/: __init__.py
src/simulation/: __init__.py
tests/: test_config.py  test_geometry.py  test_materials.py
